--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "360e0c38",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
     "\n",
     "    #endregion\n",
     "\n",
-    "     #region we compute the integral for 1D domain(s)\n",
+    "    #region we compute the integral for 1D domain(s)\n",
     "\n",
     "    integral1DWYYKK = Array{Any,1}(undef,length(coordinates))\n",
     "    modifiedμ=Array{Any,1}(undef,length(coordinates))\n",
@@ -1286,25 +1286,25 @@
     "\n",
     "    #kernelIntegral=Array{Float64,2}(undef,length(L_MINUS_N),length(L_MINUS_N))\n",
     "\n",
-    "\n",
     "    kernelIntegral=build_kernelIntegral_gpu(integral1DWYYKK, L_MINUS_N, pointsIndices, coordinates; use_float32=true)\n",
     "\n",
-    "    @show kernelIntegral\n",
+    "    function eachElementAjiννᶜ(νᶜ,ν,iField,iExpr,α)\n",
+    "        for eachα in α \n",
+    "            α = bigα[iExpr, iField]\n",
+    "            nᶜ = eachα.nᶜ\n",
+    "            n = eachα.n\n",
+    "            \n",
     "\n",
-    "    function eachElementAjiννᶜ(iνᶜ,iν,iField,iExpr,α)\n",
-    "        nᶜ = eachα.nᶜ\n",
-    "        n = eachα.n\n",
-    "        precompute_valid_pairs(vec2car.(pointsIndices))\n",
-    "        \n",
+    "\n",
+    "        end\n",
     "    end\n",
     "\n",
     "\n",
     "    for iExpr in eachindex(exprs) # j of Ajiννᶜ\n",
     "        for iField in eachindex(fields) # i of Ajiννᶜ\n",
-    "            α = bigα[iExpr, iField]\n",
-    "            for iν in eachindex(νIndices) # ν in Ajiννᶜ (in the relative coordinates) \n",
-    "                for iνᶜ in eachindex(pointsIndices) # νᶜ in Ajiννᶜ (in the relative coordinates)\n",
-    "                    Ajiννᶜ = eachElementAjiννᶜ(iνᶜ,iν,iField,iExpr,α)\n",
+    "            for ν in νIndices # ν in Ajiννᶜ (in the relative coordinates) \n",
+    "                for νᶜ in pointsIndices # νᶜ in Ajiννᶜ (in the relative coordinates)\n",
+    "                    Ajiννᶜ = eachElementAjiννᶜ(νᶜν,iField,iExpr,α)\n",
     "                end\n",
     "            end\n",
     "        end\n",
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "id": "ec2748b7",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1407,8 @@
       "(typeof(integral1DWYYKK[1]), typeof(modifiedμ[1])) = (Array{Float64, 4}, Array{Num, 3})\n",
       "size(integral1DWYYKK[1]) = (3, 3, 6, 6)\n",
       "(modifiedμ, integral1DWYYKK[1]) = (Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]], [0.5 0.0 0.0; 0.0 0.5 0.0; 0.0 0.0 0.0;;; -0.16666666666666652 0.0 0.0; 0.0 0.16666666666666696 0.0; 0.0 0.0 0.0;;; 0.04166666666666652 0.0 0.0; 0.0 0.04166666666666652 0.0; 0.0 0.0 0.0;;; -0.0083333333333336 0.0 0.0; 0.0 0.008333333333334044 0.0; 0.0 0.0 0.0;;; 0.001388888888889254 0.0 0.0; 0.0 0.0013888888888885138 0.0; 0.0 0.0 0.0;;; -0.00019841269841247566 0.0 0.0; 0.0 0.00019841269841123222 0.0; 0.0 0.0 0.0;;;; -0.16666666666666652 0.0 0.0; 0.0 0.16666666666666696 0.0; 0.0 0.0 0.0;;; 0.08333333333333304 0.0 0.0; 0.0 0.08333333333333304 0.0; 0.0 0.0 0.0;;; -0.0250000000000008 0.0 0.0; 0.0 0.02500000000000213 0.0; 0.0 0.0 0.0;;; 0.005555555555557016 0.0 0.0; 0.0 0.005555555555554055 0.0; 0.0 0.0 0.0;;; -0.0009920634920623783 0.0 0.0; 0.0 0.000992063492056161 0.0; 0.0 0.0 0.0;;; 0.00014880952380984523 0.0 0.0; 0.0 0.0001488095238100821 0.0; 0.0 0.0 0.0;;;; 0.04166666666666652 0.0 0.0; 0.0 0.04166666666666652 0.0; 0.0 0.0 0.0;;; -0.0250000000000008 0.0 0.0; 0.0 0.02500000000000213 0.0; 0.0 0.0 0.0;;; 0.008333333333335524 0.0 0.0; 0.0 0.008333333333331083 0.0; 0.0 0.0 0.0;;; -0.0019841269841247566 0.0 0.0; 0.0 0.001984126984112322 0.0; 0.0 0.0 0.0;;; 0.0003720238095246131 0.0 0.0; 0.0 0.00037202380952520525 0.0; 0.0 0.0 0.0;;; -5.7870370370298e-5 0.0 0.0; 0.0 5.78703703742652e-5 0.0; 0.0 0.0 0.0;;;; -0.0083333333333336 0.0 0.0; 0.0 0.008333333333334044 0.0; 0.0 0.0 0.0;;; 0.005555555555557016 0.0 0.0; 0.0 0.005555555555554055 0.0; 0.0 0.0 0.0;;; -0.0019841269841247566 0.0 0.0; 0.0 0.001984126984112322 0.0; 0.0 0.0 0.0;;; 0.0004960317460328175 0.0 0.0; 0.0 0.0004960317460336069 0.0; 0.0 0.0 0.0;;; -9.645061728383e-5 0.0 0.0; 0.0 9.6450617290442e-5 0.0; 0.0 0.0 0.0;;; 1.543209876566149e-5 0.0 0.0; 0.0 1.5432098755102034e-5 0.0; 0.0 0.0 0.0;;;; 0.001388888888889254 0.0 0.0; 0.0 0.0013888888888885138 0.0; 0.0 0.0 0.0;;; -0.0009920634920623783 0.0 0.0; 0.0 0.000992063492056161 0.0; 0.0 0.0 0.0;;; 0.0003720238095246131 0.0 0.0; 0.0 0.00037202380952520525 0.0; 0.0 0.0 0.0;;; -9.645061728383e-5 0.0 0.0; 0.0 9.6450617290442e-5 0.0; 0.0 0.0 0.0;;; 1.9290123457076864e-5 0.0 0.0; 0.0 1.9290123443877543e-5 0.0; 0.0 0.0 0.0;;; -3.1565656573226715e-6 0.0 0.0; 0.0 3.156565659444431e-6 0.0; 0.0 0.0 0.0;;;; -0.00019841269841247566 0.0 0.0; 0.0 0.00019841269841123222 0.0; 0.0 0.0 0.0;;; 0.00014880952380984523 0.0 0.0; 0.0 0.0001488095238100821 0.0; 0.0 0.0 0.0;;; -5.7870370370298e-5 0.0 0.0; 0.0 5.78703703742652e-5 0.0; 0.0 0.0 0.0;;; 1.543209876566149e-5 0.0 0.0; 0.0 1.5432098755102034e-5 0.0; 0.0 0.0 0.0;;; -3.1565656573226715e-6 0.0 0.0; 0.0 3.156565659444431e-6 0.0; 0.0 0.0 0.0;;; 5.260942756872093e-7 0.0 0.0; 0.0 5.260942782412156e-7 0.0; 0.0 0.0 0.0])\n",
-      "kernelIntegral = Float32[0.00462963 0.0 0.00030864196 0.0 8.267197f-6 0.0; 0.0 0.000462963 0.0 2.066799f-5 0.0 0.0; 0.00030864196 0.0 2.7557324f-5 0.0 8.573388f-7 0.0; 0.0 2.066799f-5 0.0 1.0716736f-6 0.0 0.0; 8.267197f-6 0.0 8.573388f-7 0.0 2.9227463f-8 0.0; 0.0 0.0 0.0 0.0 0.0 0.000462963]\n"
+      "kernelIntegral = Float32[0.00462963 0.0 0.00030864196 0.0 8.267197f-6 0.0; 0.0 0.000462963 0.0 2.066799f-5 0.0 0.0; 0.00030864196 0.0 2.7557324f-5 0.0 8.573388f-7 0.0; 0.0 2.066799f-5 0.0 1.0716736f-6 0.0 0.0; 8.267197f-6 0.0 8.573388f-7 0.0 2.9227463f-8 0.0; 0.0 0.0 0.0 0.0 0.0 0.000462963]\n",
+      "typeof(kernelIntegral) = Matrix{Float32}\n"
      ]
     },
     {
@@ -1419,7 +1420,7 @@
       "Suggestion: check for spelling errors or missing imports.\n",
       "\n",
       "Stacktrace:\n",
-      " [1] (::var\"#eachElementAjiννᶜ#ASemiSymbolic##6\"{Array{Vector{Int64}, 3}})(iνᶜ::Int64, iν::Int64, iField::Int64, iExpr::Int64, α::Vector{Any})\n",
+      " [1] (::var\"#eachElementAjiννᶜ#ASemiSymbolic##7\"{Array{Vector{Int64}, 3}})(iνᶜ::Int64, iν::Int64, iField::Int64, iExpr::Int64, α::Vector{Any})\n",
       "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X46sZmlsZQ==.jl:79\n",
       " [2] ASemiSymbolic(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
       "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X46sZmlsZQ==.jl:91\n",
