still working with gpu

--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -934,7 +934,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
+   "id": "e1cc5ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# don't know if this works\n",
+    "\n",
+    "using KernelAbstractions, Adapt\n",
+    "# assume backend already detected and `stack_integrals` exists\n",
+    "\n",
+    "# ---------- GPU kernel: one thread per (iExpr, iField)\n",
+    "# Kout is the output CoefU array [nExpr, nFields]\n",
+    "@kernel function compute_CoefU_kernel!(\n",
+    "    Kout,            # Float array (nExpr, nFields)\n",
+    "    S,               # stacked integrals: (ncoord, nmu, nmu, nL, nL)\n",
+    "    Lmat, Pmat,      # mapping arrays as before\n",
+    "    # C matrices packed:\n",
+    "    C_left,          # Float array: (n_mu_plus_eta, nL)  -- tmpCˡη (μ+η x linearl)\n",
+    "    C_right,         # Float array: (n_muc_plus_eta, nL) -- tmpCˡημᶜ (μc+ηc x linearlc)\n",
+    "    Ulocal_arr,      # Float array: (n_mu_plus_eta, nFields)\n",
+    "    # alpha indexing:\n",
+    "    alpha_flat,      # Int32 flattened alpha indices\n",
+    "    alpha_ptrs,      # Int32 start pointers per pair (len = nExpr*nFields+1) 1-based\n",
+    "    # alpha properties:\n",
+    "    alpha_n,         # Int32 array of shape (n_alpha, ncoord)  -- base n for each alpha\n",
+    "    alpha_nc,        # Int32 array (n_alpha, ncoord)\n",
+    "    # substituted values pre-evaluated:\n",
+    "    subVal,          # Float array: (n_alpha, n_muc_plus_eta) numeric\n",
+    "    # dims\n",
+    "    nExpr::Int32, nFields::Int32,\n",
+    "    ncoord::Int32, nmu::Int32, nL::Int32\n",
+    "    )\n",
+    "    (iex, jfield) = @index(Global, NTuple{2})\n",
+    "    if iex <= nExpr && jfield <= nFields\n",
+    "        acc = zero(eltype(Kout))\n",
+    "        # compute flattened pair index for alpha_ptrs (1-based)\n",
+    "        pair_idx = (iex - 1) * nFields + jfield\n",
+    "        startp = alpha_ptrs[pair_idx]\n",
+    "        endp   = alpha_ptrs[pair_idx+1] - 1\n",
+    "\n",
+    "        # iterate over alpha entries\n",
+    "        for aidx in startp:endp\n",
+    "            alpha_id = alpha_flat[aidx]            # actual alpha index (1-based)\n",
+    "            # read base multi-indices n and n^c\n",
+    "            # alpha_n and alpha_nc are stored as contiguous blocks: alpha_n[(alpha_id-1)*ncoord + ic]\n",
+    "            # but for simplicity we assume alpha_n is shaped (n_alpha, ncoord)\n",
+    "            @inbounds for μc_idx in 1:nmu\n",
+    "                for μ_idx in 1:nmu\n",
+    "                    # iterate inner sums over μ+η and μc+ηc\n",
+    "                    # But we don't have direct lists for μ+η; here we assume\n",
+    "                    # C_left and Ulocal are indexed by μ_plus_eta_idx\n",
+    "                    # and C_right by μc_plus_eta_idx.\n",
+    "                    # We must loop over μ_plus_eta and μc_plus_eta indices:\n",
+    "                    # For performance you'd probably tile over these too, but here we keep it simple.\n",
+    "                    # If subVal is (n_alpha, n_muc_plus_eta) we need μc_plus_eta index in 1..n_muc_plus_eta.\n",
+    "                    # We iterate over those ranges:\n",
+    "                    for μcpe in 1:size(C_right, 1)         # μc_plus_eta index\n",
+    "                        tmpCr = C_right[μcpe, :]           # view of size nL\n",
+    "                        ssub = subVal[alpha_id, μcpe]\n",
+    "                        if ssub == 0.0\n",
+    "                            continue\n",
+    "                        end\n",
+    "                        for μpe in 1:size(C_left, 1)       # μ_plus_eta index\n",
+    "                            tmpCl = C_left[μpe, :]        # view of size nL\n",
+    "                            U_here = Ulocal_arr[μpe, jfield]\n",
+    "                            # Now we iterate l and l^c indices (linearl indices)\n",
+    "                            # For now loop full range of nL (you can shrink this if you precomputed lists)\n",
+    "                            prod_sum = zero(eltype(acc))\n",
+    "                            # We'll compute kernelProducts for the (ic) product using S\n",
+    "                            # But this depends on lvar and lfield; so we loop over l and lc\n",
+    "                            for linearl in 1:nL\n",
+    "                                for linearlc in 1:nL\n",
+    "                                    # build kernelProducts across coordinates\n",
+    "                                    kernp = one(eltype(acc))\n",
+    "                                    @inbounds for ic in 1:ncoord\n",
+    "                                        l_field = Lmat[linearl, ic]  # careful: ensure Lmat layout matches\n",
+    "                                        l_var   = Lmat[linearlc, ic]\n",
+    "                                        # choose μc, μ indices appropriate: here we used μ_idx, μc_idx\n",
+    "                                        # but S expects (ic, μc, μ, lvar+1, lfield+1)\n",
+    "                                        kernp *= S[ic, μc_idx, μ_idx, l_var+1, l_field+1]\n",
+    "                                    end\n",
+    "                                    # multiply with C entries (tmpCl[linearl], tmpCr[linearlc])\n",
+    "                                    prod_sum += tmpCl[linearl] * tmpCr[linearlc] * kernp\n",
+    "                                end\n",
+    "                            end\n",
+    "                            # accumulate: multiply by substituted value and U\n",
+    "                            acc += prod_sum * ssub * U_here\n",
+    "                        end\n",
+    "                    end\n",
+    "                end\n",
+    "            end\n",
+    "        end\n",
+    "        Kout[iex, jfield] = acc\n",
+    "    end\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "id": "debb0153",
    "metadata": {},
    "outputs": [
@@ -998,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "3a48cee1",
    "metadata": {},
    "outputs": [
@@ -1059,32 +1158,7 @@
     "    #return\n",
     "end\n",
     "\n",
-    "# CPU reference implementation (same semantics as your original code)\n",
-    "function kernelIntegral_cpu!(kernelIntegral, integral1DWYYKK, L_MINUS_N, pointsTuples, coordinates)\n",
-    "    nL = length(L_MINUS_N)\n",
-    "    for idxc in 1:nL\n",
-    "        for idx in 1:nL\n",
-    "            kernelIntegral[idx, idxc] = 0.0\n",
-    "            l_minus_n = L_MINUS_N[idx]\n",
-    "            lᶜ_minus_nᶜ = L_MINUS_N[idxc]\n",
-    "            for μc_idx in 1:length(pointsTuples)\n",
-    "                linearμc = pointsTuples[μc_idx]\n",
-    "                for μ_idx in 1:length(pointsTuples)\n",
-    "                    linearμ = pointsTuples[μ_idx]\n",
-    "                    tmpKernelProduct = 1.0\n",
-    "                    for ic in eachindex(coordinates)\n",
-    "                        l_n_field = Tuple(l_minus_n)[ic]\n",
-    "                        l_n_variable = Tuple(lᶜ_minus_nᶜ)[ic]\n",
-    "                        tmpKernelProduct *= integral1DWYYKK[ic][linearμc[ic], linearμ[ic], l_n_variable+1, l_n_field+1]\n",
-    "                    end\n",
-    "                    kernelIntegral[idx, idxc] += tmpKernelProduct\n",
-    "                end\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "    return kernelIntegral\n",
-    "end\n",
-    "\n",
+    "          \n",
     "# Top-level function to build and run GPU kernel\n",
     "function build_kernelIntegral_gpu(integral1DWYYKK, L_MINUS_N, pointsTuples, coordinates; use_float32::Bool=false)\n",
     "    # stack integrals to a 5D array: (ncoord, nmu, nmu, nL, nL)\n",
@@ -1147,59 +1221,36 @@
     "    end\n",
     "    K_res = Array(K_d)\n",
     "    return K_res\n",
-    "end\n",
-    "\n",
-    "# ------------------\n",
-    "# Small correctness test\n",
-    "function _test_small()\n",
-    "    # choose small sizes\n",
-    "    ncoord = 3\n",
-    "    nmu = 4\n",
-    "    nL = 5\n",
-    "    nPoints = 6\n",
-    "\n",
-    "    # build random integral1DWYYKK per coord: dims (nmu, nmu, nL, nL)\n",
-    "    integral1DWYYKK = [rand(Float64, nmu, nmu, nL, nL) for ic in 1:ncoord]\n",
-    "\n",
-    "    # L_MINUS_N: choose sequences of small multi-indices (tuples)\n",
-    "    function tuple_from_index(idx)\n",
-    "        t = ntuple(k->0, ncoord)\n",
-    "        x = idx-1\n",
-    "        for d in 1:ncoord\n",
-    "            t = Base.setindex(t, Int((x % nL)), d)\n",
-    "            x ÷= nL\n",
-    "        end\n",
-    "        return t\n",
-    "    end\n",
-    "    L_MINUS_N = [tuple_from_index(i) for i in 1:nL]\n",
-    "\n",
-    "    # pointsTuples: random indices in 1:nmu for each coordinate\n",
-    "    pointsTuples = [ntuple(ic->rand(1:nmu), ncoord) for p in 1:nPoints]\n",
-    "\n",
-    "    coords = 1:ncoord\n",
-    "\n",
-    "    # CPU reference\n",
-    "    K_cpu = zeros(Float64, nL, nL)\n",
-    "    kernelIntegral_cpu!(K_cpu, integral1DWYYKK, L_MINUS_N, pointsTuples, coords)\n",
-    "\n",
-    "    # GPU run (or backend-run)\n",
-    "    K_gpu = build_kernelIntegral_gpu(integral1DWYYKK, L_MINUS_N, pointsTuples, coords; use_float32=false)\n",
-    "\n",
-    "    @show maximum(abs.(K_cpu .- K_gpu))\n",
-    "    @show K_cpu[1:3,1:3]\n",
-    "    @show K_gpu[1:3,1:3]\n",
-    "    return\n",
-    "end\n",
-    "\n",
-    "if abspath(PROGRAM_FILE) == @__FILE__\n",
-    "    println(\"Running small test...\")\n",
-    "    _test_small()\n",
     "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
+   "id": "d2e08fd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 1\n",
+       " 3\n",
+       " 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a=(1,3,2);b=(2,3)\n",
+    "a ∪ b \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "id": "360e0c38",
    "metadata": {},
    "outputs": [
@@ -1216,13 +1267,23 @@
    "source": [
     "# inside ASemiSymbolic\n",
     "\n",
+    "function precompute_valid_pairs(ensemblePoints2,ensemblePoints)\n",
+    "    valid_pairs = Tuple{CartesianIndex,CartesianIndex}[]\n",
+    "    for l in ensemblePoints\n",
+    "        for lᶜ in ensemblePoints2\n",
+    "            # If any extra condition applies, check here\n",
+    "            push!(valid_pairs, (lᶜ,l))\n",
+    "        end\n",
+    "    end\n",
+    "    return valid_pairs\n",
+    "end\n",
     "\n",
     "function precompute_valid_pairs(ensemblePoints)\n",
     "    valid_pairs = Tuple{CartesianIndex,CartesianIndex}[]\n",
     "    for l in ensemblePoints\n",
     "        for lᶜ in ensemblePoints\n",
     "            # If any extra condition applies, check here\n",
-    "            push!(valid_pairs, (l, lᶜ))\n",
+    "            push!(valid_pairs, (lᶜ,l))\n",
     "        end\n",
     "    end\n",
     "    return valid_pairs\n",
@@ -1244,7 +1305,7 @@
     "\n",
     "    L_MINUS_N = multiOrdersIndices\n",
     "    @show L_MINUS_N = L_MINUS_N .-L_MINUS_N[1]\n",
-    "\n",
+    "    \n",
     "    \n",
     "\n",
     "    #endregion\n",
@@ -1288,15 +1349,57 @@
     "\n",
     "    kernelIntegral=build_kernelIntegral_gpu(integral1DWYYKK, L_MINUS_N, pointsIndices, coordinates; use_float32=true)\n",
     "\n",
-    "    function eachElementAjiννᶜ(νᶜ,ν,iField,iExpr,α)\n",
-    "        for eachα in α \n",
-    "            α = bigα[iExpr, iField]\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    function eachElementAjiννᶜ(νᶜ,ν,iField,iExpr,pointsIndices,L_MINUS_N,coordinates)\n",
+    "        Atmp::Float32\n",
+    "        Areturn::Num\n",
+    "        μ_plus_η = νᶜ # we do not subtract from ν since the coordinates are local and ν != (1,1,...)\n",
+    "        linearμ_plus_η=LI_L_MINUS_N[μ_plus_η]\n",
+    "        Atmp=0.0\n",
+    "        Areturn =0\n",
+    "        α = bigα[iExpr, iField]\n",
+    "        μᶜ_μ_pairs=precompute_valid_pairs(pointsIndices)\n",
+    "        for eachα ∈ α \n",
     "            nᶜ = eachα.nᶜ\n",
     "            n = eachα.n\n",
-    "            \n",
+    "            nodeValue = eachα.node\n",
     "\n",
+    "            L_avail = (n .+ L_MINUS_N) ∩ L_MINUS_N\n",
+    "            Lᶜ_avail = (nᶜ .+ L_MINUS_N) ∩ L_MINUS_N\n",
     "\n",
+    "            lᶜ_l_pairs= precompute_valid_pairs(Lᶜ_avail,L_avail)\n",
+    "\n",
+    "            localmapηᶜ = Dict{Any,Any}()\n",
+    "\n",
+    "            for μᶜ_plus_ηᶜ ∈ pointsIndices\n",
+    "                linearμᶜ_plus_ηᶜ=LI_points[μᶜ_plus_ηᶜ]\n",
+    "                \n",
+    "                for iVar in eachindex(vars)\n",
+    "                    localmapηᶜ[iVar] = varM[iVar, linearμᶜ_plus_ηᶜ][]\n",
+    "                end \n",
+    "                \n",
+    "                substitutedValue = substitute(nodeValue, localmapηᶜ)\n",
+    "\n",
+    "                pureFloatKernel = 1.0\n",
+    "\n",
+    "                for (lᶜ,l) ∈ lᶜ_l_pairs \n",
+    "                    linearlᶜ=LI_L_MINUS_N[lᶜ]\n",
+    "                    linearl=LI_L_MINUS_N[l]\n",
+    "                    l_n_field = Tuple(l-n)\n",
+    "                    l_n_variable = Tuple(lᶜ-nᶜ)\n",
+    "                    for (μᶜ,μ) ∈ μᶜ_μ_pairs\n",
+    "                        for iCoord ∈ eachindex(coordinates)\n",
+    "                            pureFloatKernel*=integral1DWYYKK[iCoord][μᶜ[iCoord],μ[iCoord],l_n_variabl[iCoord]e+1,l_n_field[iCoord]+1]*tmpCˡημᶜ[linearμᶜ_plus_ηᶜ,linearlᶜ]*tmpCˡημ[linearμ_plus_η,linearl]\n",
+    "                        end\n",
+    "                    end\n",
+    "                end\n",
+    "                Atmp+= substitutedValue*pureFloatKernel\n",
+    "            end\n",
+    "            Areturn+=Atmp\n",
     "        end\n",
+    "        return Areturn\n",
     "    end\n",
     "\n",
     "\n",
@@ -1304,7 +1407,128 @@
     "        for iField in eachindex(fields) # i of Ajiννᶜ\n",
     "            for ν in νIndices # ν in Ajiννᶜ (in the relative coordinates) \n",
     "                for νᶜ in pointsIndices # νᶜ in Ajiννᶜ (in the relative coordinates)\n",
-    "                    Ajiννᶜ = eachElementAjiννᶜ(νᶜν,iField,iExpr,α)\n",
+    "                    \n",
+    "                    Ajiννᶜ = eachElementAjiννᶜ(νᶜ,ν,iField,iExpr,α)\n",
+    "                end\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "                  \n",
+    "\n",
+    "                    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return Ajiννᶜ,tmp\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d77fd41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inside ASemiSymbolic\n",
+    "\n",
+    "function precompute_valid_pairs(ensemblePoints2,ensemblePoints)\n",
+    "    valid_pairs = Tuple{CartesianIndex,CartesianIndex}[]\n",
+    "    for l in ensemblePoints\n",
+    "        for lᶜ in ensemblePoints2\n",
+    "            # If any extra condition applies, check here\n",
+    "            push!(valid_pairs, (lᶜ,l))\n",
+    "        end\n",
+    "    end\n",
+    "    return valid_pairs\n",
+    "end\n",
+    "\n",
+    "function precompute_valid_pairs(ensemblePoints)\n",
+    "    valid_pairs = Tuple{CartesianIndex,CartesianIndex}[]\n",
+    "    for l in ensemblePoints\n",
+    "        for lᶜ in ensemblePoints\n",
+    "            # If any extra condition applies, check here\n",
+    "            push!(valid_pairs, (lᶜ,l))\n",
+    "        end\n",
+    "    end\n",
+    "    return valid_pairs\n",
+    "end\n",
+    "\n",
+    "function ASemiSymbolic(coordinates,multiOrdersIndices,pointsIndices,multiPointsIndices,middleLinearν,Δ,varM,bigα,orderBspline,WorderBspline,NtypeofExpr,NtypeofFields)\n",
+    "    # I write this function to be able to go through the matrix inversion path\n",
+    "    # the model function is AuSymbolic (below)\n",
+    "\n",
+    "\n",
+    "    # here we develop!!! 06/11/2025!!!\n",
+    "\n",
+    "\n",
+    "    νIndices=[pointsIndices[14]] # here I just put this, since normally ν that defines L(ν) in relative coordinates is centered \n",
+    "\n",
+    "\n",
+    "    tmp=[]\n",
+    "    #region preparation \n",
+    "\n",
+    "    L_MINUS_N = multiOrdersIndices\n",
+    "    @show L_MINUS_N = L_MINUS_N .-L_MINUS_N[1]\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    #endregion\n",
+    "\n",
+    "    #region we compute the integral for 1D domain(s)\n",
+    "\n",
+    "    integral1DWYYKK = Array{Any,1}(undef,length(coordinates))\n",
+    "    modifiedμ=Array{Any,1}(undef,length(coordinates))\n",
+    "    for iCoord in eachindex(coordinates) # for each \n",
+    "        integralParams = @strdict oB =orderBspline[iCoord] oWB = WorderBspline[iCoord] νCoord=pointsIndices[middleLinearν][iCoord] LCoord = multiPointsIndices[end][iCoord] ΔCoord=Δ[iCoord] l_n_max=L_MINUS_N[end][iCoord]\n",
+    "        output = myProduceOrLoad(getIntegralWYYKK,integralParams,\"intKernel\")\n",
+    "        integral1DWYYKK[iCoord] = output[\"intKernelforνLΔ\"]\n",
+    "        modifiedμ[iCoord] = output[\"modμ\"] # this can be still 'nothing'\n",
+    "    end\n",
+    "    @show typeof(integral1DWYYKK[1]), typeof(modifiedμ[1])\n",
+    "    @show size(integral1DWYYKK[1])\n",
+    "    @show modifiedμ,integral1DWYYKK[1]\n",
+    "    #endregion\n",
+    "\n",
+    "\n",
+    "    coefInversionDict = @strdict coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ\n",
+    "\n",
+    "    output=myProduceOrLoad(TaylorCoefInversion,coefInversionDict,\"taylorCoefInv\")\n",
+    "    Cˡη=output[\"CˡηGlobal\"]\n",
+    "\n",
+    "    # the order is: (νᶜ,) ν, i, j  here\n",
+    "\n",
+    "    Ajiννᶜ = Array{Num,4}(undef,length(pointsIndices),length(pointsIndices),NtypeofFields,NtypeofExpr)\n",
+    "\n",
+    "\n",
+    "    LI_points = LinearIndices(pointsIndices)\n",
+    "    #LI_multi  = LinearIndices(multiOrdersIndices)\n",
+    "    LI_L_MINUS_N = LinearIndices(L_MINUS_N)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    # prepare N-dimension WYYKK kernel integral over Ω\n",
+    "\n",
+    "    #kernelIntegral=Array{Float64,2}(undef,length(L_MINUS_N),length(L_MINUS_N))\n",
+    "\n",
+    "    kernelIntegral=build_kernelIntegral_gpu(integral1DWYYKK, L_MINUS_N, pointsIndices, coordinates; use_float32=true)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    for iExpr in eachindex(exprs) # j of Ajiννᶜ\n",
+    "        for iField in eachindex(fields) # i of Ajiννᶜ\n",
+    "            for ν in νIndices # ν in Ajiννᶜ (in the relative coordinates) \n",
+    "                for νᶜ in pointsIndices # νᶜ in Ajiννᶜ (in the relative coordinates)\n",
+    "                    Ajiννᶜ = eachElementAjiννᶜ_gpu(νᶜ,ν,iField,iExpr,α;bigα, C_eta_left, C_eta_right, Ulocal,\n",
+    "        pointsIndices, L_MINUS_N, LI_points, LI_L_MINUS_N,\n",
+    "        stackedS, Lmat,\n",
+    "        vars, varM, coordinates,\n",
+    "        batch_mu_pairs = 10000,\n",
+    "        workgroup = (256,))\n",
     "                end\n",
     "            end\n",
     "        end\n",
